--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -9,7 +9,15 @@
   </div>
 </footer>
 {{ if not hugo.IsServer }}
-{{ template "_internal/google_analytics.html" . }}
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-PC6CG81XTW"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-PC6CG81XTW');
+</script>
 {{ end }}
 
 {{- if (isset .Site.Params "social") -}}
